--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
 *{
     margin: 0;
     padding: 0;
-
+    font-family: 'Courgette', cursive;
+    font-family: 'Staatliches', cursive;
     box-sizing: border-box;
     scroll-behavior: smooth;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-
+@import url('https://fonts.googleapis.com/css2?family=Courgette&family=Staatliches&display=swap');
 ::-webkit-scrollbar{
     width: 8px;
     
@@ -266,6 +267,7 @@ margin-top: 1rem;
 }
 .services2{   
     margin-bottom: 50px;
+    padding: 10px;
 }
 .part1{
     width: 260px;
